# sqlite-lembed

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  VERSION  sqlite-lembed.c
tests/: test-loadable.py
